configuration properties for the data source programmatically.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-
-spring.datasource.url=jdbc:h2:mem:deliveringflowers
+com.rmmcosta.datasource.url=jdbc:mysql://localhost:3306/plant?serverTimezone=UTC
+com.rmmcosta..datasource.username=pm
+com.rmmcosta..datasource.password=plantmanager
+spring.datasource.initialization-mode=always
