tests with @DataJpaTest and TestEntityManager.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ com.rmmcosta.datasource.url=jdbc:mysql://localhost:3306/plant?serverTimezone=UTC
 com.rmmcosta..datasource.username=pm
 com.rmmcosta..datasource.password=plantmanager
 spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
