--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-com.rmmcosta.datasource.url=jdbc:mysql://localhost:3306/plant?serverTimezone=UTC
-com.rmmcosta..datasource.username=pm
-com.rmmcosta..datasource.password=plantmanager
+spring.datasource.url=jdbc:mysql://localhost:3306/plant?serverTimezone=UTC
+spring.datasource.username=pm
+spring.datasource.password=plantmanager
 spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.platform=mysql
